# pet_robot

./: .gitignore  PROJECT_ARCHITECTURE.md
.claude/: settings.local.json
Software/ESP32/main/: CMakeLists.txt  main.cpp  main.h
Software/Server/: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  SERVER_STRUCTURE.md  create_server_structure.py  install_dependencies.sh  main.cpp
Software/Server/Common/: Constants.h  Errors.h  Result.h  Types.h
Software/Server/Controllers/AuthWebSocketClient/: AuthWebSocketClient.cpp  AuthWebSocketClient.h
Software/Server/Controllers/DeviceTcpController/: DeviceTcpController.cpp  DeviceTcpController.h
Software/Server/Core/Application/: Application.cpp  Application.h
Software/Server/Core/Config/: Config.cpp  Config.h
Software/Server/Core/DeviceConnectionManager/: DeviceConnectionManager.cpp  DeviceConnectionManager.h
Software/Server/Filters/AdminFilter/: AdminFilter.cpp  AdminFilter.h
Software/Server/Filters/AuthFilter/: AuthFilter.cpp  AuthFilter.h
Software/Server/Models/: Device.cc  DeviceBinding.h  GpsHistory.cc  GpsHistory.h  TrafficStats.h  User.cc
Software/Server/Services/Admin/: AdminService.cpp  AdminService.h
Software/Server/Services/Ai/: AiService.cpp  AiService.h
Software/Server/Services/Auth/: AuthService.cpp  AuthService.h
Software/Server/Services/Device/: DeviceService.cpp  DeviceService.h
Software/Server/Services/Gps/: GpsService.cpp  GpsService.h
Software/Server/Services/Stream/: StreamService.cpp  StreamService.h
Software/Server/Services/Traffic/: TrafficService.cpp  TrafficService.h
Software/Server/Services/User/: UserService.cpp  UserService.h
Software/Server/common/: constant.h  error.h  variable.h
Software/Server/config/: config.json  database.json  model.json
Software/Server/core/UDP_server/: UDP_server.cpp  UDP_server.h
Software/Server/core/client_manager/: client_manager.cpp  client_manager.h
Software/Server/core/health_checker/: health_checker.cpp  health_checker.h
Software/Server/core/websocket_server/: websocket_server.cpp  websocket_server.h
Software/Server/data/: HistoryLog_2025-12-09  config.json
Software/Server/data/config/: logger.json  model.json
Software/Server/database/token_manager/: token_manager.cpp  token_manager.h
Software/Server/database/user_manager/: user_manager.cpp  user_manager.h
(+149 files in other folders)
