idf_component_register(SRCS "main.cpp" 
                            "task_MPU6050/task_MPU6050.cpp"
                            "../Hardware/WIFI/WIFI.cpp"
                            "../Hardware/UDP/UDP.cpp"
                            "../Hardware/I2Cdev/I2Cdev.cpp"
                            "../Hardware/MPU6050/MPU6050.cpp"
                            "../Hardware/TIME/TIME.cpp"
                            "../System/delay/delay.cpp"
                            "../System/sys/sys.cpp"
                       INCLUDE_DIRS "." "task_MPU6050" "../Hardware" "../System")
